added styles.css and worked on some html/css exercises

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html>
 <head>
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
   <script language="JavaScript">
     let z = "It could either be " + 2.3 + " or " + 5;
-    document.write(z);
+    //document.write(z);
   </script>
 </head>
 <body>
-  
+  <table>
+    <tr>
+      <th scope="col">Make</th>
+      <th scope="col">Model</th>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>iMac</td>
+    </tr>
+    <tr>
+      <td>Dell</td>
+      <td>Vostro</td>
+    </tr>
+  </table>
 </body>
 </html>
