learning css borders for tables

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
   <script language="JavaScript">
+    /*
     let tasty = "pasta"
     switch (tasty) {
       case "burrito":
@@ -18,6 +19,7 @@
         cuisine = "American"
     }
     document.write(cuisine);
+    */
   </script>
 </head>
 <body>
@@ -27,5 +29,22 @@
            size="22" onchange="checkCollege(this)">
   </form>
   -->
+  <table>
+    <tr>
+      <th scope="col">Make</th>
+      <th scope="col">Model</th>
+      <th scope="col">Price</th>      
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>iMac</td>
+      <td>$99</td>      
+    </tr>
+    <tr>
+      <td>Dell</td>
+      <td>Vostro</td>
+      <td>$49</td>       
+    </tr>
+  </table>
 </body>
 </html>
