learning about styling table background colors and the text color with css

--- a/index.html
+++ b/index.html
@@ -52,5 +52,19 @@
   </script>
 </head>
 <body>
+  <table>
+    <tr class="clicka">
+      <th scope="col">Make</th>
+      <th scope="col">Model</th>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>iMac</td>
+    </tr>
+    <tr>
+      <td>Dell</td>
+      <td>Vostro</td>
+    </tr>
+  </table>
 </body>
 </html>
