--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
   <script language="JavaScript">
-    f = new Array(5)
-    for (let i = 0; i < 5; i++) {
-      let body = 'z = a * Math.pow(x,' + i + '); return z'
-      f[i] = new Function('a', 'x', body)
-    }
-    document.write(f[2](4, 4))
+    let a = '2+2*4'
+    document.write(eval(a))
   </script>
 </head>
 <body>
