learning about the Math object

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
   <script language="JavaScript">
-    let a = '2+2*4'
-    document.write(eval(a))
+    document.write(Math.atan2(2)/Math.PI + '\u03c0')
   </script>
 </head>
 <body>
