--- a/index.html
+++ b/index.html
@@ -4,25 +4,11 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
   <script language="JavaScript">
-    document.write(Math.atan2(2)/Math.PI + '\u03c0')
+    // document.write(Math.atan2(2)/Math.PI + '\u03c0')
   </script>
 </head>
 <body>
-  <!--
-  <table>
-    <tr class="clicka">
-      <th scope="col">Make</th>
-      <th scope="col">Model</th>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>iMac</td>
-    </tr>
-    <tr>
-      <td>Dell</td>
-      <td>Vostro</td>
-    </tr>
-  </table>
--->
+  Enter some text here:<br>
+  <input type="text" name="city" size="10" maxlength="24">
 </body>
 </html>
