learning about submit buttons and making an image appear as a submit button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <textarea name="saluda" rows="3" cols="15"></textarea>
-  <input type="text" maxlength="15">
+  <input type="image" src="http://www.asmarterwaytolearn.com/btn_submit.png" alt="Submit image" width="30" height="10">
 </body>
 </html>
