learning how to make radio buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="image" src="http://www.asmarterwaytolearn.com/btn_submit.png" alt="Submit image" width="30" height="10">
+  <input type="radio" name="salsa" value="sauce">
 </body>
 </html>
