messing around with multiple radio buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="radio" name="salsa" value="sauce">
+  <input type="radio" name="binary" value="yes" checked="checked">Yes
+  <input type="radio" name="binary" value="no">No
 </body>
 </html>
