learning about checkboxes in html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="radio" name="binary" value="yes" checked="checked">Yes
-  <input type="radio" name="binary" value="no">No
+  <input type="checkbox" name="fragrances" value="Pure" checked="checked"> Pure
+  <input type="checkbox" name="fragrances" value="Blanc"> Blanc
 </body>
 </html>
