--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="checkbox" name="fragrances" value="Pure" checked="checked"> Pure
-  <input type="checkbox" name="fragrances" value="Blanc"> Blanc
+  <select name="color">
+    <option value="Red">Red</option>
+    <option value="Blue">Blue</option>
+    <option value="Gree">Green</option>
+  </select>
 </body>
 </html>
