learning about labels for inputs

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <select name="color">
-    <option value="Red">Red</option>
-    <option value="Blue">Blue</option>
-    <option value="Gree">Green</option>
-  </select>
+  <input type="radio" name="car_model" value="Ferrari" id="ferrari">
+  <label for="ferrari">loris</label>
 </body>
 </html>
