learning about fieldsets and legends

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <input type="radio" name="car_model" value="Ferrari" id="ferrari">
-  <label for="ferrari">loris</label>
+  <fieldset>
+    <legend>What colors do you like?</legend>
+    <input type="checkbox" name="colors" value="Red">Red
+    <input type="checkbox" name="colors" value="Green">Green
+  </fieldset>
 </body>
 </html>
