learning about new selectors in which you can style input texts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <fieldset>
-    <legend>What colors do you like?</legend>
-    <input type="checkbox" name="colors" value="Red">Red
-    <input type="checkbox" name="colors" value="Green">Green
-  </fieldset>
+  <form>
+    <fieldset>
+      <legend>First name and comment</legend>
+      <label>First name: <input type="text"></label><br>
+      <label>Comment:<br><textarea rows="3" cols="45"></textarea></label>    
+    </fieldset>        
+  </form>
 </body>
 </html>
