learning about html and css comments

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <form>
-    <fieldset>
-      <legend>First name and comment</legend>
-      <label>First name: <input type="text"></label><br>
-      <label>Comment:<br><textarea rows="3" cols="45"></textarea></label>    
-    </fieldset>        
-  </form>
+  <!-- <h1>Hello World!</h1> -->
+  <p>Thanks for showing up.</p>
 </body>
 </html>
