learning the diffrences in box depths in an html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- <h1>Hello World!</h1> -->
-  <p>Thanks for showing up.</p>
+  <div id="only">
+    <h1>Hello World!</h1>
+    <p>How you doin', World!</p>
+  </div>
 </body>
 </html>
