learning how to style different boxes in css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="only">
-    <h1>Hello World!</h1>
-    <p>How you doin', World!</p>
+  <div>
+    <h1>Hello World</h1>
+    <p>suh dude</p>
   </div>
 </body>
 </html>
