learning about width percentages and div centering

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div>
-    <h1>Hello World</h1>
-    <p>suh dude</p>
+  <div id="main">
+    <div id="secondary">
+      <p>Slow lorises are a group of several species of primates which make up the genus Nycticebus.</p>
+    </div>
   </div>
 </body>
 </html>
