learning how to set divs to the sides and messing with a new challenge in js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="main">
-    <div id="secondary">
-      <p>Slow lorises are a group of several species of primates which make up the genus Nycticebus.</p>
-    </div>
+  <div id="a">
+    <p>Slow lorises are a group of several species of primates which make up the genus Nycticebus.</p>
+  </div>
+  <div id="b">
+    <p>Slow lorises are the stars of many YouTube videos.</p>
+  </div>
+  <div id="c">
+    <p>Slow lorises are cute, but their bite is poisonous.</p>
   </div>
 </body>
 </html>
