learning how to make a div navigation banner

--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="a">
-    <p>Slow lorises are a group of several species of primates which make up the genus Nycticebus.</p>
+  <div id="header">
+    <h1>The Slow Loris Site</h1>
   </div>
-  <div id="b">
-    <p>Slow lorises are the stars of many YouTube videos.</p>
-  </div>
-  <div id="c">
-    <p>Slow lorises are cute, but their bite is poisonous.</p>
-  </div>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
+  <p>
+  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
+  </p>
 </body>
 </html>
