--- a/index.html
+++ b/index.html
@@ -6,37 +6,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>The Slow Loris Site</h1>
+    <h2>Adopt a loris.</h2>
   </div>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
-  <p>
-  Add styling to the div so whitespace is eliminated on top, left and right of the color block. 
-  </p>
 </body>
 </html>
