learning about styling images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <div id="header">
-    <h2>Adopt a loris.</h2>
+    <img src="http://www.asmarterwaytolearn.com/robo_logo.png" alt="logo" width="55" height="78">
+    <h2>A Smarter Way To Learn</h2>
   </div>
 </body>
 </html>
