learning about fixed and abosolute positions of elements

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div id="header">
-    <img src="http://www.asmarterwaytolearn.com/robo_logo.png" alt="logo" width="55" height="78">
     <h2>A Smarter Way To Learn</h2>
   </div>
+  <p id="intro">Knowing the syntax of a computer language doesn't make you a master programmer. But you can't even get on the path to mastery until you know the syntax. So that's where we start. The best way to learn syntax, we've found, is to read a little bit, then practice a lot. That's why we pair each short chapter with a set of interactive exercises that you do immediately after reading. Using this approach, a learner can build a solid foundation for fluency in forty to fifty hours. And the knowledge sticks.</p>  
 </body>
 </html>
