learning a bit about the strong and em tag

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="header">
-    <h2>A Smarter Way To Learn</h2>
-  </div>
-  <p id="intro">Knowing the syntax of a computer language doesn't make you a master programmer. But you can't even get on the path to mastery until you know the syntax. So that's where we start. The best way to learn syntax, we've found, is to read a little bit, then practice a lot. That's why we pair each short chapter with a set of interactive exercises that you do immediately after reading. Using this approach, a learner can build a solid foundation for fluency in forty to fifty hours. And the knowledge sticks.</p>  
+  <h1>Molina Healthcare</h1>
+  <h3>Services</h3>
+  <p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
+  <h3>Benefits</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <em>do eiusmod tempor incididunt</em> ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
+  <h3>FAQ's</h3>
+  <p>Lorem ipsum dolor sit amet, <strong>adipiscing <em>elit</strong>, sed do eiusmod tempor incididunt</em> ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
 </body>
 </html>
