working on lists, some of my favorite things

--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Molina Healthcare</h1>
-  <h3>Services</h3>
-  <p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
-  <h3>Benefits</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, <em>do eiusmod tempor incididunt</em> ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
-  <h3>FAQ's</h3>
-  <p>Lorem ipsum dolor sit amet, <strong>adipiscing <em>elit</strong>, sed do eiusmod tempor incididunt</em> ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl condimentum id.</p>
+  <ul>
+    <li>Mac & cheese</li>
+    <li>Pizza</li>
+    <li>Ham & cheese</li>
+  </ul>
+  <ol>
+    <li>Study</li>
+    <li>Eat</li>
+    <li>Sleep</li>
+  </ol>
+  <ul>
+    <li>Spain</li>
+    <li>Canada</li>
+    <li>South America</li>
+  </ul>
+  <ol>
+    <li>The Grand Budapest Hotel</li>
+    <li>Avengers: Endgame</li>
+    <li>Avengers: Infinity War</li>
+    <li>The Big Bang Theory</li>
+    <li>Friends</li>
+  </ol>
 </body>
 </html>
