Learn hidden elements in html and css

--- a/index.html
+++ b/index.html
@@ -6,26 +6,13 @@
 </head>
 <body>
   <ul>
-    <li>Mac & cheese</li>
-    <li>Pizza</li>
-    <li>Ham & cheese</li>
+    <li>Milk</li>
+    <li>Cheese
+      <ul>
+        <li>Blue cheese</li>
+        <li>Feta</li>
+      </ul>
+    </li>
   </ul>
-  <ol>
-    <li>Study</li>
-    <li>Eat</li>
-    <li>Sleep</li>
-  </ol>
-  <ul>
-    <li>Spain</li>
-    <li>Canada</li>
-    <li>South America</li>
-  </ul>
-  <ol>
-    <li>The Grand Budapest Hotel</li>
-    <li>Avengers: Endgame</li>
-    <li>Avengers: Infinity War</li>
-    <li>The Big Bang Theory</li>
-    <li>Friends</li>
-  </ol>
 </body>
 </html>
