--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <ul>
-    <li>Milk</li>
-    <li>Cheese
-      <ul>
-        <li>Blue cheese</li>
-        <li>Feta</li>
-      </ul>
-    </li>
+  <div class="container">
+    sosa
+  </div>
   </ul>
 </body>
 </html>
