Study Block and Inline

--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus pariatur debitis reprehenderit dolore nemo
-    voluptatibus, repellat perspiciatis sunt provident possimus a error quos voluptatum eos repellendus amet in asperiores
-    enim.</p>
-  <p>Suscipit quasi, quaerat dicta voluptatum magni voluptatem voluptatibus consequuntur fugit iste? Eum, praesentium
-    neque voluptatem consectetur ab ratione veritatis fuga facilis incidunt quia quam laborum dolores nisi consequuntur
-    quod tempore.</p>
-  <p>Dolor explicabo fuga consequuntur suscipit laudantium et id culpa vero adipisci voluptatem libero quia quam minima
-    corrupti nemo officiis, dignissimos ex unde voluptatibus blanditiis molestias vitae! Fugit dolore libero suscipit.</p>
-  <p>Excepturi itaque ea inventore sint architecto corrupti, corporis illo odio ut qui, sapiente voluptates. Vitae
-    repudiandae enim voluptate facilis rerum in consequatur, dicta doloremque maxime qui, veritatis quam alias dolorem.
-  </p>
-  <p>Sed voluptate qui hic placeat voluptatum quia magnam debitis, officiis omnis, ipsum consequatur tempore ratione
-    laboriosam saepe ea numquam fuga quo doloribus natus velit dolorum! Magni perferendis dolorem sed quaerat.</p>
+  <div>
+    <h2>Introduction</h2>
+  </div>
+  <div class="main-content">
+    <h2>Main Content</h2>
+  </div>
+  <div class="contact-us">
+    <h2>Contact Us</h2>
+  </div>
 </body>
 </html>
