--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <p>Hello World</p>
-  <div>Hello World</div>
-  <span>Hello World</span>
-  <span>Hello World</span>
-  <div class="second">Hello World</div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Margin and Padding exercise</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="one">
+      DIV ONE
+    </div>
+    <div class="two">
+      DIV TWO
+    </div>
+    <div class="three">
+      DIV THREE
+    </div>
+  </body>
 </html>
