--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="card">
-      <h1 class="title">I'm a card</h1>
-      <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
-      <div class="button-container">and a <button>BIG BUTTON</button></div>
+    <div class="flex-container">
+      <div class="one"> </div>
+      <div class="two"></div>
+      <div class="three"></div>
     </div>
-  </body>
 </html>
