--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="flex-container">
-      <div class="one"> </div>
-      <div class="two"></div>
-      <div class="three"></div>
+    <div class="container">
+      <div class="item"> </div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
 </html>
