Attempt to find LCM of a range of numbers

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="container">
-      <div class="item"> </div>
-      <div class="item"></div>
-      <div class="item"></div>
+    <div class="box">
+      <div>One</div>
+      <div>Two</div>
+      <div>Three</div>
     </div>
 </html>
