--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="box">
-      <div>One</div>
-      <div>Two</div>
-      <div>Three</div>
-    </div>
+    <form class="example">
+      <div class="wrapper"><label for="text">First Name</label><input type="text" id="text"><input type="submit" value="Send"></div>
+    </form>
 </html>
