--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <form class="example">
-      <div class="wrapper"><label for="text">First Name</label><input type="text" id="text"><input type="submit" value="Send"></div>
-    </form>
+    <ul class="flex-container nowrap">
+      <li class="flex-item">1</li>
+      <li class="flex-item">2</li>
+      <li class="flex-item">3</li>
+      <li class="flex-item">4</li>
+      <li class="flex-item">5</li>
+      <li class="flex-item">6</li>
+      <li class="flex-item">7</li>
+      <li class="flex-item">8</li>
+    </ul>
+    
+    <ul class="flex-container wrap">
+      <li class="flex-item">1</li>
+      <li class="flex-item">2</li>
+      <li class="flex-item">3</li>
+      <li class="flex-item">4</li>
+      <li class="flex-item">5</li>
+      <li class="flex-item">6</li>
+      <li class="flex-item">7</li>
+      <li class="flex-item">8</li>
+    </ul>
+    
+    <ul class="flex-container wrap-reverse">
+      <li class="flex-item">1</li>
+      <li class="flex-item">2</li>
+      <li class="flex-item">3</li>
+      <li class="flex-item">4</li>
+      <li class="flex-item">5</li>
+      <li class="flex-item">6</li>
+      <li class="flex-item">7</li>
+      <li class="flex-item">8</li>
+    </ul>
 </html>
