--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
     </script>
   </head>
   <body>
-    <input type="range" min="0" max="10" step="0.1" value="1">
-
-    <div class="container">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>    
-    </div>
+    <ul class="navigation">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
 </html>
