--- a/index.html
+++ b/index.html
@@ -4,24 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Margin and Padding exercise 2</title>
+    <title>CENTER THIS DIV</title>
     <link rel="stylesheet" href="styles.css">
-    <script language="JavaScript">
-      var container = document.querySelector('.container'), slider = document.querySelector('input');
-
-      slider.addEventListener('input', function () {
-        container.style.gap = this.value + 'rem';
-      }, false);  
-    </script>
   </head>
   <body>
-    <div class="wrapper">
-      <header class="header">Header</header>
-      <article class="main">
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>  
-      </article>
-      <aside class="aside aside-1">Aside 1</aside>
-      <aside class="aside aside-2">Aside 2</aside>
-      <footer class="footer">Footer</footer>
+    <div class="container">
+      <div class="box">center this div</div>
     </div>
+  </body>
 </html>
