--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
   </head>
   <body>
     <div class="title">Information!</div>
+    <div class="container">
+      <div class="first"><
+        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/barberry.png?raw=true" alt="barberry">
+        <div class="text">This is a type of plant. We love this one.</div>
+      </div>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+      <div class="second">
+        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/chilli.png?raw=true" alt="chili">
+        <div class="text">This is another type of plant. Isn't it nice</div>
+      </div>
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice</div>
+      <div class="third">
+        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/pepper.png?raw=true" alt="pepper">
+        <div class="text">We have so many plants. Yay plants.</div>
+      </div>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
-
-    <img src="./images/saffron.png" alt="saffron">
-    <div class="text">I'm running out of things to say about plants.</div>
+      <div class="fourth">
+        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/saffron.png?raw=true" alt="saffron">
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+    </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
