Solve 04-flex-information TOP exercise

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <body>
     <div class="title">Information!</div>
     <div class="container">
-      <div class="first"><
+      <div class="first item">
         <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/barberry.png?raw=true" alt="barberry">
         <div class="text">This is a type of plant. We love this one.</div>
       </div>
 
-      <div class="second">
+      <div class="second item">
         <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/chilli.png?raw=true" alt="chili">
         <div class="text">This is another type of plant. Isn't it nice</div>
       </div>
 
-      <div class="third">
+      <div class="third item">
         <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/pepper.png?raw=true" alt="pepper">
         <div class="text">We have so many plants. Yay plants.</div>
       </div>
 
-      <div class="fourth">
+      <div class="fourth item">
         <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/saffron.png?raw=true" alt="saffron">
         <div class="text">I'm running out of things to say about plants.</div>
       </div>
