--- a/index.html
+++ b/index.html
@@ -1,39 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Modal</title>
   </head>
   <body>
-    <div class="title">Information!</div>
-    <div class="container">
-      <div class="first item">
-        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/barberry.png?raw=true" alt="barberry">
-        <div class="text">This is a type of plant. We love this one.</div>
-      </div>
-
-      <div class="second item">
-        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/chilli.png?raw=true" alt="chili">
-        <div class="text">This is another type of plant. Isn't it nice</div>
-      </div>
-
-      <div class="third item">
-        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/pepper.png?raw=true" alt="pepper">
-        <div class="text">We have so many plants. Yay plants.</div>
-      </div>
-
-      <div class="fourth item">
-        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/04-flex-information/images/saffron.png?raw=true" alt="saffron">
-        <div class="text">I'm running out of things to say about plants.</div>
-      </div>
-    </div>
-
-    <!-- disregard this section, it's here to give attribution to the creator of these icons -->
-    <div class="footer">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div class="modal">
+      <div class="icon">!</div>
+      <div class="header"><strong>Are you sure you want to do that?</strong></div>
+      <div class="close-button">✖</div>
+      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+      <button class="continue">Continue</button>
+      <button class="cancel">Cancel</button>
     </div>
   </body>
 </html>
