--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LAYOUT</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Modal</title>
   </head>
   <body>
-    <div class="modal">
-      <div class="first">
-        <div class="icon">!</div>
+    <div class="header">
+      <ul class="left-links">
+        <li><a href="google.com">About</a></li>
+        <li><a href="google.com">Store</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="google.com">Profile</a></li>
+        <li><a href="google.com">Settings</a></li>
+      </ul>
+    </div>
+    <div class="content">
+      <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/06-flex-layout/logo.png?raw=true" alt="">
+      <div class="input">
+        <input type="text">
       </div>
-      <div class="second">
-        <div class="heading">
-          <div class="header"><strong>Are you sure you want to do that?</strong></div>
-          <div class="close-button">✖</div>
-        </div>
-        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-        <div class="buttons">
-          <button class="continue">Continue</button>
-          <button class="cancel">Cancel</button>
-        </div>
+      <div class="buttons">
+        <button>Do the thing!</button>
+        <button>Do the other thing!</button>
       </div>
+    </div>
+    <div class="footer">
+      <ul class="left-links">
+        <li><a href="google.com">Advertising</a></li>
+        <li><a href="google.com">Business</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="google.com">Privacy</a></li>
+        <li><a href="google.com">Terms</a></li>
+      </ul>
     </div>
   </body>
 </html>
