--- a/index.html
+++ b/index.html
@@ -4,40 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAYOUT</title>
+    <title>The Holy Grail</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="whole">
+    <div class="main">
       <div class="header">
-        <ul class="left-links">
-          <li><a href="google.com">About</a></li>
-          <li><a href="google.com">Store</a></li>
-        </ul>
-        <ul class="right-links">
-          <li><a href="google.com">Profile</a></li>
-          <li><a href="google.com">Settings</a></li>
-        </ul>
+        MY AWESOME WEBSITE
       </div>
       <div class="content">
-        <img src="https://github.com/TheOdinProject/css-exercises/blob/main/flex/06-flex-layout/logo.png?raw=true" alt="">
-        <div class="input">
-          <input type="text">
+        <div class="sidebar">
+          <ul>
+            <li><a href="#">⭐ - link one</a></li>
+            <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+            <li><a href="#">🖌️ - link three</a></li>
+            <li><a href="#">👌🏽 - link four</a></li>
+          </ul>
         </div>
-        <div class="buttons">
-          <button>Do the thing!</button>
-          <button>Do the other thing!</button>
+        <div class="cards">
+          <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
+          <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
+          <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
+          <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
+          <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
+          <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
         </div>
       </div>
       <div class="footer">
-        <ul class="left-links">
-          <li><a href="google.com">Advertising</a></li>
-          <li><a href="google.com">Business</a></li>
-        </ul>
-        <ul class="right-links">
-          <li><a href="google.com">Privacy</a></li>
-          <li><a href="google.com">Terms</a></li>
-        </ul>
+        The Odin Project ❤️
       </div>
     </div>
   </body>
