--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Holy Grail</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Flexbox Crash Course</title>
   </head>
   <body>
-    <div class="container">
-      <div class="box-1"> A </div>
-      <div class="box-2"> B </div>
-      <div class="box-3"> C </div>
+    <div class="flex-container">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
     </div>
   </body>
 </html>
