Work on optional YouTube project

--- a/index.html
+++ b/index.html
@@ -9,10 +9,37 @@
     <title>Flexbox Crash Course</title>
   </head>
   <body>
-    <div class="flex-container">
-      <div class="item">Item 1</div>
-      <div class="item">Item 2</div>
-      <div class="item">Item 3</div>
-    </div>
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">Flexbox</div>
+        <ul class="nav">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <header class="header">
+      <div class="container">
+        <div>
+          <h1>Flexbox Crash Course</h1>
+          <p>This crash course was created by Brad Traversy to help you learn the basics of flexbox. Flexbox is a very important and useful tool in CSS.</p>
+        </div>
+        <img src="https://traversymedia.com/images/grid.svg" alt="3 by 3 grid">
+      </div>
+    </header>
+    <section class="boxes">
+      <div class="container">
+        <div class="box">
+          <h2><i class="fas fa-arrows-alt-v"></i>Alignment & Space</h2>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
