--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Holy Grail</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Flexbox Crash Course</title>
   </head>
   <body>
@@ -38,6 +39,15 @@
       <div class="container">
         <div class="box">
           <h2><i class="fas fa-arrows-alt-v"></i>Alignment & Space</h2>
+          <p>A more efficient way to lay out, align and distribute space among items in a container</p>
+        </div>
+        <div class="box">
+          <h2><i class="fas fa-arrows-alt"></i>Tricky Positioning</h2>
+          <p>Flexbox usually solves tricky problems including how to position or dynamically resize elements on a page</p>
+        </div>
+        <div class="box">
+          <h2><i class="fas fa-mobile"></i>Responsive Design</h2>
+          <p>Flexbox makes building a website layout (and making it responsive!) much, much easier</p>
         </div>
       </div>
     </section>
