Attempt to work on button for Mozilla numbers example

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="practice.js"></script>
 </head>
 <body>
-  
+  <button>Start machine</button>
+  <p>The machine is stopped.</p>
 </body>
 </html>
