Concatenation in context

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="practice.js"></script>
 </head>
 <body>
-  <button>Start machine</button>
-  <p>The machine is stopped.</p>
+  <button>Press me</button>
 </body>
 </html>
