--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  <label for="weather">Select the weather type today: </label>
-  <select id="weather">
-    <option value="">--Make a choice--</option>
-    <option value="sunny">Sunny</option>
-    <option value="rainy">Rainy</option>
-    <option value="snowing">Snowing</option>
-    <option value="overcast">Overcast</option>
+  <label for="theme">Select theme: </label>
+  <select id="theme">
+    <option value="white">White</option>
+    <option value="black">Black</option>
   </select>
 
-  <p></p>
+  <h1>This is my website</h1>
   <script src="practice.js"></script>
 </body>
 </html>
