--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <select id="theme">
     <option value="white">White</option>
     <option value="black">Black</option>
+    <option value="purple">Purple</option>
+    <option value="yellow">Yellow</option>
+    <option value="psychedelic">Psychedelic</option>
   </select>
 
   <h1>This is my website</h1>
