--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <label for="theme">Select theme: </label>
-  <select id="theme">
-    <option value="white">White</option>
-    <option value="black">Black</option>
-    <option value="purple">Purple</option>
-    <option value="yellow">Yellow</option>
-    <option value="psychedelic">Psychedelic</option>
-  </select>
+  <input id="textBox" type="text"></input>
+  <div id="output"></div>
 
-  <h1>This is my website</h1>
   <script src="practice.js"></script>
 </body>
 </html>
